exports[`ui reducer should clear error and pending on availabilities fetching success 1`] = `
Object {
  "availabilities": Array [
    Object {
      "available": 5,
      "available_authenticated": 5,
      "checksum": "741a63e3e215bfe34e41456046a888df",
      "date": "2017-01-17T23:00:00Z",
      "id": null,
      "local_date_formatted": "17 January 2017, 14:00",
      "local_time_formatted": "14:00",
      "message": null,
      "price_change": 0,
      "resource_uri": "/v1/facility/meson-california-2/availability/1484694000",
    },
    Object {
      "available": 5,
      "available_authenticated": 5,
      "checksum": "f62563b07e0d12ebeba3c3e08fef18e9",
      "date": "2017-01-17T23:30:00Z",
      "id": null,
      "local_date_formatted": "17 January 2017, 14:30",
      "local_time_formatted": "14:30",
      "message": null,
      "price_change": 0,
      "resource_uri": "/v1/facility/meson-california-2/availability/1484695800",
    },
    Object {
      "available": 5,
      "available_authenticated": 5,
      "checksum": "6fe504d63665e10c6e12a5a47a58b55c",
      "date": "2017-01-18T00:00:00Z",
      "id": null,
      "local_date_formatted": "17 January 2017, 15:00",
      "local_time_formatted": "15:00",
      "message": null,
      "price_change": 0,
      "resource_uri": "/v1/facility/meson-california-2/availability/1484697600",
    },
    Object {
      "available": 5,
      "available_authenticated": 5,
      "checksum": "0adb7808ce6017c3d7da731911dcb4d9",
      "date": "2017-01-18T00:30:00Z",
      "id": null,
      "local_date_formatted": "17 January 2017, 15:30",
      "local_time_formatted": "15:30",
      "message": null,
      "price_change": 0,
      "resource_uri": "/v1/facility/meson-california-2/availability/1484699400",
    },
    Object {
      "available": 5,
      "available_authenticated": 5,
      "checksum": "f041d04f269299eb666bcb82d03597d5",
      "date": "2017-01-18T01:00:00Z",
      "id": null,
      "local_date_formatted": "17 January 2017, 16:00",
      "local_time_formatted": "16:00",
      "message": null,
      "price_change": 0,
      "resource_uri": "/v1/facility/meson-california-2/availability/1484701200",
    },
  ],
  "availabilitiesError": false,
  "availabilitiesFetching": false,
  "buttonColor": "#3E4862",
  "currentPanel": 1,
  "dateSelectorState": "collapsed",
  "defaultHeight": "380px",
  "defaultWidth": "330px",
  "facility": "meson-california-2",
  "guestEmail": "",
  "guestName": "",
  "guestPhone": "",
  "guestSelectorState": "collapsed",
  "headerColor": "#53628C",
  "headerImage": "https://zenezake.files.wordpress.com/2015/07/img_6715.jpg",
  "headerTextColor": "white",
  "maxGuests": 6,
  "minGuests": 1,
  "newsletterSubscription": false,
  "numberOfPanels": 2,
  "renderAtMaxSize": false,
  "selectedAvailability": "741a63e3e215bfe34e41456046a888df",
  "selectedDate": 2016-12-11T23:00:00.000Z,
  "selectedGuests": 1,
  "status": "pending",
  "timeFocused": "",
  "timePeriodSelected": 0,
  "timeSelectorState": "expanded",
}
`;

exports[`ui reducer should set availabilities fetching errors 1`] = `
Object {
  "availabilities": Array [
    Object {
      "available": 5,
      "available_authenticated": 5,
      "checksum": "741a63e3e215bfe34e41456046a888df",
      "date": "2017-01-17T23:00:00Z",
      "id": null,
      "local_date_formatted": "17 January 2017, 14:00",
      "local_time_formatted": "14:00",
      "message": null,
      "price_change": 0,
      "resource_uri": "/v1/facility/meson-california-2/availability/1484694000",
    },
    Object {
      "available": 5,
      "available_authenticated": 5,
      "checksum": "f62563b07e0d12ebeba3c3e08fef18e9",
      "date": "2017-01-17T23:30:00Z",
      "id": null,
      "local_date_formatted": "17 January 2017, 14:30",
      "local_time_formatted": "14:30",
      "message": null,
      "price_change": 0,
      "resource_uri": "/v1/facility/meson-california-2/availability/1484695800",
    },
    Object {
      "available": 5,
      "available_authenticated": 5,
      "checksum": "6fe504d63665e10c6e12a5a47a58b55c",
      "date": "2017-01-18T00:00:00Z",
      "id": null,
      "local_date_formatted": "17 January 2017, 15:00",
      "local_time_formatted": "15:00",
      "message": null,
      "price_change": 0,
      "resource_uri": "/v1/facility/meson-california-2/availability/1484697600",
    },
    Object {
      "available": 5,
      "available_authenticated": 5,
      "checksum": "0adb7808ce6017c3d7da731911dcb4d9",
      "date": "2017-01-18T00:30:00Z",
      "id": null,
      "local_date_formatted": "17 January 2017, 15:30",
      "local_time_formatted": "15:30",
      "message": null,
      "price_change": 0,
      "resource_uri": "/v1/facility/meson-california-2/availability/1484699400",
    },
    Object {
      "available": 5,
      "available_authenticated": 5,
      "checksum": "f041d04f269299eb666bcb82d03597d5",
      "date": "2017-01-18T01:00:00Z",
      "id": null,
      "local_date_formatted": "17 January 2017, 16:00",
      "local_time_formatted": "16:00",
      "message": null,
      "price_change": 0,
      "resource_uri": "/v1/facility/meson-california-2/availability/1484701200",
    },
  ],
  "availabilitiesError": true,
  "availabilitiesFetching": false,
  "buttonColor": "#3E4862",
  "currentPanel": 1,
  "dateSelectorState": "collapsed",
  "defaultHeight": "380px",
  "defaultWidth": "330px",
  "facility": "meson-california-2",
  "guestEmail": "",
  "guestName": "",
  "guestPhone": "",
  "guestSelectorState": "collapsed",
  "headerColor": "#53628C",
  "headerImage": "https://zenezake.files.wordpress.com/2015/07/img_6715.jpg",
  "headerTextColor": "white",
  "maxGuests": 6,
  "minGuests": 1,
  "newsletterSubscription": false,
  "numberOfPanels": 2,
  "renderAtMaxSize": false,
  "selectedAvailability": "741a63e3e215bfe34e41456046a888df",
  "selectedDate": 2016-12-11T23:00:00.000Z,
  "selectedGuests": 1,
  "status": "pending",
  "timeFocused": "",
  "timePeriodSelected": 0,
  "timeSelectorState": "expanded",
}
`;

exports[`ui reducer should set availabilities fetching to true 1`] = `
Object {
  "availabilities": Array [
    Object {
      "available": 5,
      "available_authenticated": 5,
      "checksum": "741a63e3e215bfe34e41456046a888df",
      "date": "2017-01-17T23:00:00Z",
      "id": null,
      "local_date_formatted": "17 January 2017, 14:00",
      "local_time_formatted": "14:00",
      "message": null,
      "price_change": 0,
      "resource_uri": "/v1/facility/meson-california-2/availability/1484694000",
    },
    Object {
      "available": 5,
      "available_authenticated": 5,
      "checksum": "f62563b07e0d12ebeba3c3e08fef18e9",
      "date": "2017-01-17T23:30:00Z",
      "id": null,
      "local_date_formatted": "17 January 2017, 14:30",
      "local_time_formatted": "14:30",
      "message": null,
      "price_change": 0,
      "resource_uri": "/v1/facility/meson-california-2/availability/1484695800",
    },
    Object {
      "available": 5,
      "available_authenticated": 5,
      "checksum": "6fe504d63665e10c6e12a5a47a58b55c",
      "date": "2017-01-18T00:00:00Z",
      "id": null,
      "local_date_formatted": "17 January 2017, 15:00",
      "local_time_formatted": "15:00",
      "message": null,
      "price_change": 0,
      "resource_uri": "/v1/facility/meson-california-2/availability/1484697600",
    },
    Object {
      "available": 5,
      "available_authenticated": 5,
      "checksum": "0adb7808ce6017c3d7da731911dcb4d9",
      "date": "2017-01-18T00:30:00Z",
      "id": null,
      "local_date_formatted": "17 January 2017, 15:30",
      "local_time_formatted": "15:30",
      "message": null,
      "price_change": 0,
      "resource_uri": "/v1/facility/meson-california-2/availability/1484699400",
    },
    Object {
      "available": 5,
      "available_authenticated": 5,
      "checksum": "f041d04f269299eb666bcb82d03597d5",
      "date": "2017-01-18T01:00:00Z",
      "id": null,
      "local_date_formatted": "17 January 2017, 16:00",
      "local_time_formatted": "16:00",
      "message": null,
      "price_change": 0,
      "resource_uri": "/v1/facility/meson-california-2/availability/1484701200",
    },
  ],
  "availabilitiesError": false,
  "availabilitiesFetching": true,
  "buttonColor": "#3E4862",
  "currentPanel": 1,
  "dateSelectorState": "collapsed",
  "defaultHeight": "380px",
  "defaultWidth": "330px",
  "facility": "meson-california-2",
  "guestEmail": "",
  "guestName": "",
  "guestPhone": "",
  "guestSelectorState": "collapsed",
  "headerColor": "#53628C",
  "headerImage": "https://zenezake.files.wordpress.com/2015/07/img_6715.jpg",
  "headerTextColor": "white",
  "maxGuests": 6,
  "minGuests": 1,
  "newsletterSubscription": false,
  "numberOfPanels": 2,
  "renderAtMaxSize": false,
  "selectedAvailability": "741a63e3e215bfe34e41456046a888df",
  "selectedDate": 2016-12-11T23:00:00.000Z,
  "selectedGuests": 1,
  "status": "pending",
  "timeFocused": "",
  "timePeriodSelected": 0,
  "timeSelectorState": "expanded",
}
`;
